# arduino-fwuploader

./: .ecrc  .flake8  .gitignore  .licensed.yml  .prettierignore  DistTasks.yml  FirmwareUploader.go  LICENSE.txt  README.adoc  README.md  Taskfile.yml  distrib.sh  go.mod  go.sum  gon.config.hcl  main.go  markdown-link-check-config.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  set_gopath.sh  versions.json
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml
.github/workflows/: check-certificates.yml  check-general-formatting-task.yml  check-general-formatting.yml  check-go-cross-build-task.yml  check-go-dependencies-task.yml  (+20 more)
1.0/: 404.html  index.html  sitemap.xml
2.0/: 404.html  index.html  sitemap.xml
2.1/: 404.html  index.html  sitemap.xml
2.2/: 404.html  index.html  sitemap.xml
2.3/: 404.html  index.html  sitemap.xml
2.4/: 404.html  index.html  sitemap.xml
certificates/: certutils.go  certutils_test.go
certs/: AddTrustExternalCA_Root.cer
cli/: cli.go  main.go
dev/: 404.html  index.html  sitemap.xml
docs/: deprecated.md  index.md  installation.md  plugins.md  usage.md
docsgen/: go.mod  go.sum  main.go
extras/: package_index.json.template
flasher/: certificate.go  flasher.go  nina.go  sara.go  winc.go
generator/: boards.json  generator.py  new_boards.json  raw_boards.json  s3Copy.sh
indexes/: indexes.go  indexes_test.go  rice-box.go
latest/: 404.html  index.html
module_firmware_index/: module_firmware_index.go  module_firmware_index_test.go
plugin/: plugin.go
programmers/: programmer.go
test/: conftest.py  pytest.ini  test_main.py
utils/: flasher.go  utils.go  utils_test.go
version/: version.go
(+239 files in other folders)
