[tool.poetry]
name = "arduino-fwuploader"
version = "0.0.0"
description = "arduino-fwuploader"
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
semver = "^2.13.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mkdocs = "^1.4.3"
mkdocs-material = "^7.3.6"
mdx-truly-sane-lists = "^1.3"
GitPython = "^3.1.30"
mike = "^1.0.1"
pep8-naming = "^0.12.1"
invoke = "^1.5.0"
pytest = "^6.2.4"

[tool.black]
line-length = 120
target-version = ["py38"]
